# RecRoom

./: .gitmodules  CMakeLists.txt  README.md
Cmake/Modules/: FindXercesC.cmake
Core/: CMakeLists.txt
Core/Common/: AlbedoEstimation.cpp  AlbedoEstimation.h  AlbedoEstimation.hpp  AsyncProcess.h  AsyncProcess.hpp  AttributeEstimation.h  AttributeEstimation.hpp  Common.cpp  Common.h  Common.hpp  Coordinate.h  Coordinate.hpp  CropAABB.h  CropAABB.hpp  LBFGSB.cpp  LBFGSB.h  LBFGSB.hpp  MarchingCubes.cpp  MarchingCubes.h  MarchingCubes.hpp  MarchingCubesHoppe.cpp  MarchingCubesHoppe.h  MarchingCubesHoppe.hpp  MarchingCubesRBF.cpp  MarchingCubesRBF.h  MarchingCubesRBF.hpp  MovingLeastSquares.cpp  MovingLeastSquares.h  MovingLeastSquares.hpp  NDFEstimation.h  NDFEstimation.hpp  NormalEstimation.h  NormalEstimation.hpp  PCLUtils.cpp  PCLUtils.h  PCLUtils.hpp  Point.cpp  Point.h  Point.hpp  Processor.h  (+16 more)
Core/Container/: ContainerPcLF.h  ContainerPcNDF.h  ContainerPcNDFOC.cpp  ContainerPcNDFOC.h  ContainerPcNDFOCT.cpp  ContainerPcNDFOCT.h  ContainerPcRAW.h  ContainerPcRAWOC.cpp  ContainerPcRAWOC.h  ContainerPcRAWOCT.cpp  ContainerPcRAWOCT.h
Core/Cropper/: CropperPc.h  CropperPcAABB.cpp  CropperPcAABB.h  CropperPcOutlier.cpp  CropperPcOutlier.h
Core/Estimator/: EstimatorPc.cpp  EstimatorPc.h  EstimatorPc.hpp  EstimatorPcAlbedo.cpp  EstimatorPcAlbedo.h  EstimatorPcAlbedo.hpp  EstimatorPcNDF.h  EstimatorPcNDF.hpp  EstimatorPcNormal.cpp  EstimatorPcNormal.h  EstimatorPcNormal.hpp  EstimatorPcRefineAlbedo.h  EstimatorPcRefineAlbedo.hpp
Core/Filter/: FilterPc.h  FilterPc.hpp  FilterPcAABB.h  FilterPcAABB.hpp  FilterPcRemoveDuplicate.h  FilterPcRemoveDuplicate.hpp  FilterPcRemoveNonFinite.h  FilterPcRemoveNonFinite.hpp  FilterPcRemoveOutlier.h  FilterPcRemoveOutlier.hpp
Core/Interpolator/: InterpolatorPc.h  InterpolatorPc.hpp  InterpolatorPcNearest.h  InterpolatorPcNearest.hpp
Core/Mesher/: MesherPc.cpp  MesherPc.h  MesherPc.hpp  MesherPcGP.cpp  MesherPcGP.h  MesherPcGP.hpp  MesherPcGP3.cpp  MesherPcGP3.h  MesherPcGP3.hpp  MesherPcMC.cpp  MesherPcMC.h  MesherPcMC.hpp  MesherPcMCRBF.cpp  MesherPcMCRBF.h  MesherPcPoisson.cpp  MesherPcPoisson.h  MesherPcPoisson.hpp
Core/Preprocessor/: PreprocessorPc.h
Core/Reconstructor/: ReconstructorPc.cpp  ReconstructorPc.h  ReconstructorPc.hpp  ReconstructorPcOC.cpp  ReconstructorPcOC.h
Core/Sampler/: SamplerPc.cpp  SamplerPc.h  SamplerPc.hpp  SamplerPcGrid.cpp  SamplerPcGrid.h  SamplerPcGrid.hpp  SamplerPcMLS.h  SamplerPcMLS.hpp  SamplerPcNearest.cpp  SamplerPcNearest.h  SamplerPcNearest.hpp  SamplerPcRemoveDuplicate.h  SamplerPcRemoveDuplicate.hpp
Core/Scanner/: ScannerPc.cpp  ScannerPc.h  ScannerPcBLK360.cpp  ScannerPcBLK360.h  ScannerPcE57.cpp  ScannerPcE57.h
Core/Segmenter/: SegmenterPc.h  SegmenterPc.hpp  SegmenterPcSVC.cpp  SegmenterPcSVC.h  SegmenterPcSVC.hpp
Core/Src/: AlbedoEstimater.cpp  AlbedoEstimater.h  AlbedoEstimater.hpp  AsyncProcess.cpp  AsyncProcess.h  AsyncProcess.hpp  Base.cpp  Base.h  Base.hpp  BaseClass.cpp  BaseClass.h  BaseData.cpp  BaseData.h  BaseData.hpp  BaseReconstructor.cpp  BaseReconstructor.h  BaseReconstructor.hpp  BaseSegmenter.cpp  BaseSegmenter.h  BaseSegmenter.hpp  CMakeLists.txt  Common.cpp  Common.h  Common.hpp  Container.cpp  Container.h  Container.hpp  Coordinate.cpp  Coordinate.h  Coordinate.hpp  Core.h  Data.cpp  Data.h  Data.hpp  DataE57.cpp  DataE57.h  DataE57.hpp  DownSampler.cpp  DownSampler.h  DownSampler.hpp  (+34 more)
Test/: CMakeLists.txt  meshViewer.cpp  testBLK360.cpp  testReconstructorPcOC.cpp  testScannerPcBLK360.cpp  testScannerPcE57.cpp
